web socket updates

--- a/package.json
+++ b/package.json
@@ -7,13 +7,18 @@
   },
   "packageManager": "npm@11.8.0",
   "scripts": {
-    "dev": "concurrently \"npm run dev:api\" \"npm run dev:web\"",
-    "dev:api": "wrangler dev --config wrangler.api.toml",
-    "dev:web": "react-router dev",
+    "predev": "react-router build",
+    "dev": "concurrently \"npm run dev:api\" \"npm run dev:web\" \"npm run dev:build\" \"npm run dev:ws\"",
+    "dev:api": "wrangler dev --config wrangler.api.toml --port 8787 --inspector-port 9231",
+    "dev:web": "node scripts/wait-for-paths.mjs && wrangler dev --config wrangler.web.toml --port 5173 --inspector-port 9230",
+    "dev:build": "react-router build --watch",
+    "dev:ws": "node dev/ws-server.mjs",
     "build": "react-router build",
     "preview": "react-router preview",
     "deploy:web": "npm run verify && react-router build && wrangler deploy --config wrangler.web.toml",
     "deploy:api": "npm run verify && wrangler deploy --config wrangler.api.toml",
+    "deploy:web:staging": "npm run verify && react-router build && wrangler deploy --config wrangler.web.staging.toml",
+    "deploy:api:staging": "npm run verify && wrangler deploy --config wrangler.api.staging.toml",
     "db:migrations:local": "wrangler d1 migrations apply msgstats-db --local --config wrangler.api.toml",
     "db:migrations:remote": "wrangler d1 migrations apply msgstats-db --remote --config wrangler.api.toml",
     "fmt:check": "npm run format",
@@ -45,18 +50,19 @@
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "7.4.0",
     "@typescript-eslint/parser": "7.4.0",
+    "concurrently": "^9.0.1",
     "eslint": "8.57.0",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-react": "7.34.0",
     "eslint-plugin-react-hooks": "4.6.0",
+    "miniflare": "^3.20250124.0",
     "prettier": "3.2.5",
+    "simple-git-hooks": "^2.11.1",
     "typescript": "5.3.3",
     "vite": "^5.4.0",
     "vitest": "1.3.1",
-    "wrangler": "^4.59.2",
-    "concurrently": "^9.0.1",
-    "miniflare": "^3.20250124.0",
-    "simple-git-hooks": "^2.11.1"
+    "wrangler": "^4.61.1",
+    "ws": "^8.18.0"
   },
   "simple-git-hooks": {
     "pre-commit": "npm run fmt:check && npm run check:migration-edits",
