--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "deploy:api:staging": "npm run verify && wrangler deploy --config wrangler.api.staging.toml",
     "db:migrations:local": "wrangler d1 migrations apply msgstats-db --local --config wrangler.api.toml",
     "db:migrations:remote": "wrangler d1 migrations apply msgstats-db --remote --config wrangler.api.toml",
+    "db:migrations:staging": "wrangler d1 migrations apply msgstats-db-staging --remote --config wrangler.api.staging.toml",
     "fmt:check": "npm run format",
     "check:migration-edits": "node scripts/check-migration-edits.mjs",
     "check:remote-migrations": "node scripts/check-remote-migrations.mjs",
+    "check:staging-migrations": "node scripts/check-staging-migrations.mjs",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --check .",
     "format:write": "prettier \"**/*.{ts,js,json,md,mjs,tsx,cjs}\" --write",
@@ -66,6 +68,6 @@
   },
   "simple-git-hooks": {
     "pre-commit": "npm run fmt:check && npm run check:migration-edits",
-    "pre-push": "npm run verify && npm run check:remote-migrations"
+    "pre-push": "node scripts/pre-push.mjs"
   }
 }
