--- a/wrangler.api.staging.toml
+++ b/wrangler.api.staging.toml
@@ -5,11 +5,12 @@ main = "workers/api/worker.ts"
 
 [vars]
 META_REDIRECT_URI = "https://staging.msgstats.from-trees.com/api/auth/callback"
+META_SCOPES = "pages_show_list,pages_messaging,pages_read_engagement,pages_manage_metadata,business_management,instagram_basic,instagram_manage_messages"
 
 [[d1_databases]]
 binding = "DB"
 database_name = "msgstats-db-staging"
-database_id = "REPLACE_WITH_STAGING_DB_ID"
+database_id = "54853690-cef8-4a81-9908-0dcdb9ad5910"
 
 [[durable_objects.bindings]]
 name = "SYNC_RUNS_HUB"
