changes to deployment for staging/preview/prod

--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "db:migrations:staging": "wrangler d1 migrations apply msgstats-db-staging --remote --config wrangler.api.staging.toml",
     "fmt:check": "npm run format",
     "check:migration-edits": "node scripts/check-migration-edits.mjs",
-    "check:remote-migrations": "node scripts/check-remote-migrations.mjs",
+    "check:remote-migrations": "node scripts/check-remote-migrations.mjs --env production",
+    "check:remote-migrations:staging": "node scripts/check-remote-migrations.mjs --env staging",
+    "check:remote-migrations:prod": "node scripts/check-remote-migrations.mjs --env production",
     "check:staging-migrations": "node scripts/check-staging-migrations.mjs",
     "lint": "eslint . --ext .ts,.tsx",
     "format": "prettier --check .",
