--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -2,13 +2,7 @@ name: Deploy Staging
 
 on:
   push:
-    branches:
-      - 'feature/**'
-      - 'feat/**'
-
-concurrency:
-  group: staging-deploy
-  cancel-in-progress: true
+    branches: [main]
 
 jobs:
   deploy:
@@ -19,33 +13,22 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 24
           cache: npm
-
-      - name: Install dependencies
+      - name: Install
         run: npm ci
-
+      - name: Set build info
+        run: node scripts/set-build-info.mjs --env staging --ref "$GITHUB_REF_NAME" --sha "$GITHUB_SHA" --out "$GITHUB_ENV" --var VITE_STAGING_INFO
       - name: Verify
         run: npm run verify
-
-      - name: Compute staging info
-        run: |
-          SHORT_SHA="${GITHUB_SHA::7}"
-          BRANCH="${GITHUB_REF_NAME}"
-          TIMESTAMP="$(date -u +'%Y-%m-%d %H:%M:%SZ')"
-          echo "STAGING_INFO=staging • ${BRANCH} • ${SHORT_SHA} • ${TIMESTAMP}" >> "$GITHUB_ENV"
-
       - name: Apply staging migrations
-        run: npm run db:migrations:staging
-
-      - name: Deploy web (staging)
-        env:
-          VITE_STAGING_INFO: ${{ env.STAGING_INFO }}
-        run: npm run deploy:web:staging
-
-      - name: Deploy api (staging)
-        run: npm run deploy:api:staging
+        run: npx wrangler d1 migrations apply msgstats-db-staging --remote --config wrangler.api.staging.toml
+      - name: Deploy staging API
+        run: npx wrangler deploy --config wrangler.api.staging.toml --var VITE_STAGING_INFO:$VITE_STAGING_INFO
+      - name: Build web assets
+        run: npm run build
+      - name: Deploy staging web
+        run: npx wrangler deploy --config wrangler.web.staging.toml --var VITE_STAGING_INFO:$VITE_STAGING_INFO
