--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
     branches: [main]
   workflow_dispatch:
 
+concurrency:
+  group: deploy-production
+  cancel-in-progress: false
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -21,12 +25,12 @@ jobs:
       - name: Verify
         run: npm run verify
       - name: Apply D1 migrations
-        run: npx wrangler d1 migrations apply msgstats-db --remote --config wrangler.api.toml
+        run: npx wrangler d1 migrations apply DB --env production --remote --config wrangler.api.toml
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
       - name: Deploy API worker
-        run: npx wrangler deploy --config wrangler.api.toml
+        run: npx wrangler deploy --config wrangler.api.toml --env production
         env:
           CLOUDFLARE_API_TOKEN: ${{ secrets.CLOUDFLARE_API_TOKEN }}
           CLOUDFLARE_ACCOUNT_ID: ${{ secrets.CLOUDFLARE_ACCOUNT_ID }}
