--- a/.github/workflows/promote-production.yml
+++ b/.github/workflows/promote-production.yml
@@ -8,6 +8,10 @@ on:
         required: true
         default: main
 
+concurrency:
+  group: deploy-production
+  cancel-in-progress: false
+
 jobs:
   promote:
     runs-on: ubuntu-latest
@@ -31,9 +35,9 @@ jobs:
       - name: Verify
         run: npm run verify
       - name: Apply production migrations
-        run: npx wrangler d1 migrations apply msgstats-db --remote --config wrangler.api.toml
+        run: npx wrangler d1 migrations apply DB --env production --remote --config wrangler.api.toml
       - name: Deploy production API
-        run: npx wrangler deploy --config wrangler.api.toml --var VITE_STAGING_INFO:$VITE_STAGING_INFO
+        run: npx wrangler deploy --config wrangler.api.toml --env production --var VITE_STAGING_INFO:$VITE_STAGING_INFO
       - name: Build web assets
         run: npm run build
       - name: Deploy production web
