--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
     "deploy:web": "npm run verify && react-router build && wrangler deploy --config wrangler.web.toml",
     "deploy:api": "npm run verify && wrangler deploy --config wrangler.api.toml",
     "deploy:web:staging": "npm run verify && react-router build && wrangler deploy --config wrangler.web.staging.toml",
-    "deploy:api:staging": "npm run verify && wrangler deploy --config wrangler.api.staging.toml",
-    "db:migrations:local": "wrangler d1 migrations apply msgstats-db --local --config wrangler.api.toml",
-    "db:migrations:remote": "wrangler d1 migrations apply msgstats-db --remote --config wrangler.api.toml",
-    "db:migrations:staging": "wrangler d1 migrations apply msgstats-db-staging --remote --config wrangler.api.staging.toml",
+    "deploy:api:staging": "npm run verify && wrangler deploy --config wrangler.api.toml --env staging",
+    "db:migrations:local": "wrangler d1 migrations apply DB --local --config wrangler.api.toml",
+    "db:migrations:remote": "wrangler d1 migrations apply DB --env production --remote --config wrangler.api.toml",
+    "db:migrations:staging": "wrangler d1 migrations apply DB --env staging --remote --config wrangler.api.toml",
     "fmt:check": "npm run format",
     "check:migration-edits": "node scripts/check-migration-edits.mjs",
     "check:remote-migrations": "node scripts/check-remote-migrations.mjs --env production",
