--- a/wrangler.api.toml
+++ b/wrangler.api.toml
@@ -49,3 +49,85 @@ invocation_logs = true
 
 [triggers]
 crons = ["*/5 * * * *"]
+
+[env.staging]
+name = "msgstats-api-staging"
+
+[env.staging.vars]
+META_REDIRECT_URI = "https://staging.msgstats.from-trees.com/api/auth/callback"
+META_SCOPES = "pages_show_list,pages_messaging,pages_read_engagement,pages_manage_metadata,business_management,instagram_basic,instagram_manage_messages"
+
+[[env.staging.d1_databases]]
+binding = "DB"
+database_name = "msgstats-db-staging"
+database_id = "54853690-cef8-4a81-9908-0dcdb9ad5910"
+
+[[env.staging.durable_objects.bindings]]
+name = "SYNC_RUNS_HUB"
+class_name = "SyncRunsHub"
+script_name = "msgstats-web-staging"
+
+[[env.staging.durable_objects.bindings]]
+name = "SYNC_SCOPE_ORCHESTRATOR"
+class_name = "SyncScopeOrchestrator"
+
+[[env.staging.migrations]]
+tag = "v1"
+new_classes = ["SyncScopeOrchestrator"]
+
+[[env.staging.queues.producers]]
+binding = "SYNC_QUEUE"
+queue = "msgstats-sync-staging"
+
+[[env.staging.queues.consumers]]
+queue = "msgstats-sync-staging"
+max_batch_size = 1
+
+[env.staging.observability]
+[env.staging.observability.logs]
+enabled = true
+invocation_logs = true
+
+[env.staging.triggers]
+crons = ["0 * * * *"]
+
+[env.production]
+name = "msgstats-api"
+
+[env.production.vars]
+META_REDIRECT_URI = "https://msgstats.from-trees.com/api/auth/callback"
+META_SCOPES = "pages_show_list,pages_messaging,pages_read_engagement,pages_manage_metadata,business_management,instagram_basic,instagram_manage_messages"
+
+[[env.production.d1_databases]]
+binding = "DB"
+database_name = "msgstats-db"
+database_id = "b1918df0-760c-41f1-9778-9d5f95ab9a41"
+
+[[env.production.durable_objects.bindings]]
+name = "SYNC_RUNS_HUB"
+class_name = "SyncRunsHub"
+script_name = "msgstats-web"
+
+[[env.production.durable_objects.bindings]]
+name = "SYNC_SCOPE_ORCHESTRATOR"
+class_name = "SyncScopeOrchestrator"
+
+[[env.production.migrations]]
+tag = "v1"
+new_classes = ["SyncScopeOrchestrator"]
+
+[[env.production.queues.producers]]
+binding = "SYNC_QUEUE"
+queue = "msgstats-sync"
+
+[[env.production.queues.consumers]]
+queue = "msgstats-sync"
+max_batch_size = 1
+
+[env.production.observability]
+[env.production.observability.logs]
+enabled = true
+invocation_logs = true
+
+[env.production.triggers]
+crons = ["0 * * * *"]
