--- a/.github/workflows/deploy-preview.yml
+++ b/.github/workflows/deploy-preview.yml
@@ -30,10 +30,32 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: 24
           cache: npm
       - name: Install
         run: npm ci
+      - name: Resolve SHA
+        id: sha
+        run: echo "sha=$(git rev-parse HEAD)" >> "$GITHUB_OUTPUT"
+      - name: Ensure CI succeeded
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CI_SHA: ${{ steps.sha.outputs.sha }}
+          REPO: ${{ github.repository }}
+        run: |
+          python - <<'PY'
+          import json, os, urllib.request
+          repo = os.environ["REPO"]
+          sha = os.environ["CI_SHA"]
+          url = f"https://api.github.com/repos/{repo}/actions/workflows/ci.yml/runs?per_page=20"
+          req = urllib.request.Request(url, headers={"Authorization": f"Bearer {os.environ['GH_TOKEN']}", "Accept": "application/vnd.github+json"})
+          data = json.loads(urllib.request.urlopen(req).read().decode("utf-8"))
+          runs = [r for r in data.get("workflow_runs", []) if r.get("head_sha") == sha]
+          if not runs:
+            raise SystemExit("No CI run found for selected ref.")
+          if runs[0].get("conclusion") != "success":
+            raise SystemExit("Latest CI run for selected ref did not succeed.")
+          print("CI check passed.")
+          PY
       - name: Resolve preview name
         id: preview
         run: |
@@ -44,9 +66,7 @@ jobs:
           fi
           echo "name=$NAME" >> "$GITHUB_OUTPUT"
       - name: Set build info
-        run: node scripts/set-build-info.mjs --env preview --ref "${{ inputs.ref }}" --sha "$GITHUB_SHA" --out "$GITHUB_ENV" --var VITE_STAGING_INFO
-      - name: Verify
-        run: npm run verify
+        run: node scripts/set-build-info.mjs --env preview --ref "${{ inputs.ref }}" --sha "${{ steps.sha.outputs.sha }}" --out "$GITHUB_ENV" --var VITE_STAGING_INFO
       - name: Build web assets
         run: npm run build
       - name: Create preview wrangler config
