--- a/wrangler.web.toml
+++ b/wrangler.web.toml
@@ -34,6 +34,14 @@ routes = [
 META_REDIRECT_URI = "https://staging.msgstats.from-trees.com/api/auth/callback"
 META_SCOPES = "pages_show_list,pages_messaging,pages_read_engagement,pages_manage_metadata,business_management,instagram_basic,instagram_manage_messages"
 
+[[env.staging.durable_objects.bindings]]
+name = "SYNC_RUNS_HUB"
+class_name = "SyncRunsHub"
+
+[[env.staging.migrations]]
+tag = "v1"
+new_classes = ["SyncRunsHub"]
+
 [[env.staging.services]]
 binding = "API"
 service = "msgstats-api-staging"
