--- a/wrangler.api.toml
+++ b/wrangler.api.toml
@@ -59,6 +59,14 @@ META_REDIRECT_URI = "https://staging.msgstats.from-trees.com/api/auth/callback"
 META_SCOPES = "pages_show_list,pages_messaging,pages_read_engagement,pages_manage_metadata,business_management,instagram_basic,instagram_manage_messages"
 CLOUDFLARE_ACCOUNT_ID = "125d8016e23830dcaf86de127ce90576"
 
+[[env.staging.analytics_engine_datasets]]
+binding = "AE_META_CALLS"
+dataset = "AE_META_CALLS"
+
+[[env.staging.analytics_engine_datasets]]
+binding = "AE_APP_ERRORS"
+dataset = "AE_APP_ERRORS"
+
 [[env.staging.d1_databases]]
 binding = "DB"
 database_name = "msgstats-db-staging"
@@ -100,6 +108,14 @@ name = "msgstats-api"
 META_REDIRECT_URI = "https://msgstats.from-trees.com/api/auth/callback"
 META_SCOPES = "pages_show_list,pages_messaging,pages_read_engagement,pages_manage_metadata,business_management,instagram_basic,instagram_manage_messages"
 CLOUDFLARE_ACCOUNT_ID = "125d8016e23830dcaf86de127ce90576"
+
+[[env.production.analytics_engine_datasets]]
+binding = "AE_META_CALLS"
+dataset = "AE_META_CALLS"
+
+[[env.production.analytics_engine_datasets]]
+binding = "AE_APP_ERRORS"
+dataset = "AE_APP_ERRORS"
 
 [[env.production.d1_databases]]
 binding = "DB"
