--- a/wrangler.api.toml
+++ b/wrangler.api.toml
@@ -18,6 +18,11 @@ class_name = "SyncRunsHub"
 script_name = "msgstats-web"
 
 [[durable_objects.bindings]]
+name = "INBOX_HUB"
+class_name = "InboxHub"
+script_name = "msgstats-web"
+
+[[durable_objects.bindings]]
 name = "SYNC_SCOPE_ORCHESTRATOR"
 class_name = "SyncScopeOrchestrator"
 
@@ -78,6 +83,11 @@ class_name = "SyncRunsHub"
 script_name = "msgstats-web-staging"
 
 [[env.staging.durable_objects.bindings]]
+name = "INBOX_HUB"
+class_name = "InboxHub"
+script_name = "msgstats-web-staging"
+
+[[env.staging.durable_objects.bindings]]
 name = "SYNC_SCOPE_ORCHESTRATOR"
 class_name = "SyncScopeOrchestrator"
 
@@ -125,6 +135,11 @@ database_id = "b1918df0-760c-41f1-9778-9d5f95ab9a41"
 [[env.production.durable_objects.bindings]]
 name = "SYNC_RUNS_HUB"
 class_name = "SyncRunsHub"
+script_name = "msgstats-web"
+
+[[env.production.durable_objects.bindings]]
+name = "INBOX_HUB"
+class_name = "InboxHub"
 script_name = "msgstats-web"
 
 [[env.production.durable_objects.bindings]]
