--- a/wrangler.api.toml
+++ b/wrangler.api.toml
@@ -66,6 +66,14 @@ name = "msgstats-api-staging"
 META_REDIRECT_URI = "https://staging.msgstats.from-trees.com/api/auth/callback"
 META_SCOPES = "pages_show_list,pages_messaging,pages_read_engagement,pages_manage_metadata,business_management,instagram_basic,instagram_manage_messages"
 CLOUDFLARE_ACCOUNT_ID = "125d8016e23830dcaf86de127ce90576"
+CLASSIFIER_AI_MODE = "workers_ai"
+CLASSIFIER_AI_DAILY_BUDGET_CALLS = "25"
+CLASSIFIER_AI_MAX_CALLS_PER_CONVERSATION_PER_DAY = "1"
+CLASSIFIER_AI_MAX_OUTPUT_TOKENS = "128"
+CLASSIFIER_AI_MAX_INPUT_CHARS = "1000"
+CLASSIFIER_AI_TIMEOUT_MS = "8000"
+CLASSIFIER_AI_PROMPT_VERSION = "v1"
+# CLASSIFIER_AI_MODEL = "..."  # optional
 
 [[env.staging.analytics_engine_datasets]]
 binding = "AE_META_CALLS"
@@ -123,7 +131,14 @@ name = "msgstats-api"
 [env.production.vars]
 META_REDIRECT_URI = "https://msgstats.from-trees.com/api/auth/callback"
 META_SCOPES = "pages_show_list,pages_messaging,pages_read_engagement,pages_manage_metadata,business_management,instagram_basic,instagram_manage_messages"
-CLOUDFLARE_ACCOUNT_ID = "125d8016e23830dcaf86de127ce90576"
+CLOUDFLARE_ACCOUNT_ID = "125d8016e23830dcaf86de127ce90576"CLASSIFIER_AI_MODE = "workers_ai"
+CLASSIFIER_AI_DAILY_BUDGET_CALLS = "50"
+CLASSIFIER_AI_MAX_CALLS_PER_CONVERSATION_PER_DAY = "5"
+CLASSIFIER_AI_MAX_OUTPUT_TOKENS = "128"
+CLASSIFIER_AI_MAX_INPUT_CHARS = "1000"
+CLASSIFIER_AI_TIMEOUT_MS = "8000"
+CLASSIFIER_AI_PROMPT_VERSION = "v1"
+# CLASSIFIER_AI_MODEL = "..."  # optional
 
 [[env.production.analytics_engine_datasets]]
 binding = "AE_META_CALLS"
