--- a/wrangler.api.toml
+++ b/wrangler.api.toml
@@ -131,7 +131,8 @@ name = "msgstats-api"
 [env.production.vars]
 META_REDIRECT_URI = "https://msgstats.from-trees.com/api/auth/callback"
 META_SCOPES = "pages_show_list,pages_messaging,pages_read_engagement,pages_manage_metadata,business_management,instagram_basic,instagram_manage_messages"
-CLOUDFLARE_ACCOUNT_ID = "125d8016e23830dcaf86de127ce90576"CLASSIFIER_AI_MODE = "workers_ai"
+CLOUDFLARE_ACCOUNT_ID = "125d8016e23830dcaf86de127ce90576"
+CLASSIFIER_AI_MODE = "workers_ai"
 CLASSIFIER_AI_DAILY_BUDGET_CALLS = "50"
 CLASSIFIER_AI_MAX_CALLS_PER_CONVERSATION_PER_DAY = "5"
 CLASSIFIER_AI_MAX_OUTPUT_TOKENS = "128"
