--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   "scripts": {
     "predev": "react-router build",
     "dev": "concurrently \"npm run dev:api\" \"npm run dev:web\" \"npm run dev:build\" \"npm run dev:ws\"",
-    "dev:api": "wrangler dev --config wrangler.api.toml --port 8787 --inspector-port 9231",
-    "dev:web": "node scripts/wait-for-paths.mjs && wrangler dev --config wrangler.web.toml --port 5173 --inspector-port 9230",
-    "dev:build": "react-router build --watch",
+    "dev:api": "wrangler dev --config wrangler.api.toml --port 8787 --ip 127.0.0.1 --inspector-port 9231 --inspector-ip 127.0.0.1",
+    "dev:web": "node scripts/wait-for-paths.mjs && wrangler dev --config wrangler.web.toml --port 5173 --ip 127.0.0.1 --inspector-port 9230 --inspector-ip 127.0.0.1",
+    "dev:build": "node --watch-path=src --watch-path=react-router.config.ts scripts/dev-build.mjs",
     "dev:ws": "node dev/ws-server.mjs",
     "build": "react-router build",
     "preview": "react-router preview",
