--- a/wrangler.api.toml
+++ b/wrangler.api.toml
@@ -6,6 +6,7 @@ main = "workers/api/worker.ts"
 [vars]
 META_REDIRECT_URI = "https://msgstats.from-trees.com/api/auth/callback"
 META_SCOPES = "pages_show_list,pages_messaging,pages_read_engagement,pages_manage_metadata,business_management,instagram_basic,instagram_manage_messages"
+DEPLOY_ENV = "production"
 
 [[d1_databases]]
 binding = "DB"
@@ -65,6 +66,7 @@ name = "msgstats-api-staging"
 [env.staging.vars]
 META_REDIRECT_URI = "https://staging.msgstats.from-trees.com/api/auth/callback"
 META_SCOPES = "pages_show_list,pages_messaging,pages_read_engagement,pages_manage_metadata,business_management,instagram_basic,instagram_manage_messages"
+DEPLOY_ENV = "staging"
 CLOUDFLARE_ACCOUNT_ID = "125d8016e23830dcaf86de127ce90576"
 CLASSIFIER_AI_MODE = "workers_ai"
 CLASSIFIER_AI_DAILY_BUDGET_CALLS = "25"
@@ -131,6 +133,7 @@ name = "msgstats-api"
 [env.production.vars]
 META_REDIRECT_URI = "https://msgstats.from-trees.com/api/auth/callback"
 META_SCOPES = "pages_show_list,pages_messaging,pages_read_engagement,pages_manage_metadata,business_management,instagram_basic,instagram_manage_messages"
+DEPLOY_ENV = "production"
 CLOUDFLARE_ACCOUNT_ID = "125d8016e23830dcaf86de127ce90576"
 CLASSIFIER_AI_MODE = "workers_ai"
 CLASSIFIER_AI_DAILY_BUDGET_CALLS = "50"
