--- a/env/cloudflare/vars.production.env.example
+++ b/env/cloudflare/vars.production.env.example
@@ -1,9 +1,16 @@
 # Copy to: env/cloudflare/vars.production.env
-AUTH0_DOMAIN=auth.from-trees.com
-AUTH0_AUTHORIZE_URL=https://auth.from-trees.com/authorize
-AUTH0_TOKEN_URL=https://auth.from-trees.com/oauth/token
-AUTH0_JWKS_URL=https://auth.from-trees.com/.well-known/jwks.json
-AUTH0_REDIRECT_URI=https://msgstats.from-trees.com/auth/callback
-AUTH0_AUDIENCE=
+APP_ORIGIN=https://msgstats.from-trees.com
 MSGSTATS_JWT_ISSUER=msgstats-production
 MSGSTATS_JWT_AUDIENCE=msgstats-api
+AUTH_PBKDF2_ITERATIONS=210000
+AUTH_RP_ID=msgstats.from-trees.com
+AUTH_RP_NAME=msgstats
+AUTH_ORIGIN_ALLOWLIST=https://msgstats.from-trees.com
+GOOGLE_CLIENT_ID=REPLACE_ME
+GOOGLE_REDIRECT_URI=https://msgstats.from-trees.com/auth/oauth/callback/google
+APPLE_CLIENT_ID=REPLACE_ME
+APPLE_TEAM_ID=REPLACE_ME
+APPLE_KEY_ID=REPLACE_ME
+APPLE_REDIRECT_URI=https://msgstats.from-trees.com/auth/oauth/callback/apple
+AUTH_EMAIL_FROM=auth@from-trees.com
+AUTH_EMAIL_REPLY_TO=support@from-trees.com
